[gd_scene load_steps=21 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://checkpoint.tscn" type="PackedScene" id=2]
[ext_resource path="res://respawnpoint.gd" type="Script" id=3]
[ext_resource path="res://player.gd" type="Script" id=4]
[ext_resource path="res://Player/Idle0.png" type="Texture" id=5]
[ext_resource path="res://Player/Run0.png" type="Texture" id=6]
[ext_resource path="res://Player/Run1.png" type="Texture" id=7]
[ext_resource path="res://Player/Run2.png" type="Texture" id=8]
[ext_resource path="res://Player/Run3.png" type="Texture" id=9]
[ext_resource path="res://Player/Run4.png" type="Texture" id=10]
[ext_resource path="res://Player/Run7.png" type="Texture" id=11]
[ext_resource path="res://Player/wall_slide.png" type="Texture" id=12]
[ext_resource path="res://Player/Jump1.png" type="Texture" id=13]
[ext_resource path="res://Player/Dash.png" type="Texture" id=14]
[ext_resource path="res://JgDirtTileset.tres" type="TileSet" id=15]
[ext_resource path="res://bounceblock.tscn" type="PackedScene" id=16]
[ext_resource path="res://dangerblock.tscn" type="PackedScene" id=17]
[ext_resource path="res://DimDirtTileset.tres" type="TileSet" id=18]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "Wall",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "Dash",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 5.18499, 10.1186 )

[node name="World" type="Node" index="0"]

script = ExtResource( 1 )

[node name="checkpoint" parent="." index="0" instance=ExtResource( 2 )]

position = Vector2( 1033.09, 158.449 )

[node name="respawnpoint" type="Node2D" parent="." index="1"]

position = Vector2( 2512.27, 7.54509 )
script = ExtResource( 3 )
_sections_unfolded = [ "Pause", "Transform" ]

[node name="player" type="KinematicBody2D" parent="respawnpoint" index="0"]

editor/display_folded = true
position = Vector2( -2.368, -0.944 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 4 )
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="respawnpoint/player" index="0"]

frames = SubResource( 1 )
animation = "Idle"

[node name="Camera2D" type="Camera2D" parent="respawnpoint/player/Sprite" index="0"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 2, 2 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Smoothing" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="respawnpoint/player" index="1"]

visible = false
position = Vector2( 0.476825, 3.27332 )
scale = Vector2( 2.88106, 2.84635 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="respawnpoint/player" index="2"]

rect = Rect2( -10, -10, 20, 20 )

[node name="world1" type="TileMap" parent="." index="2"]

mode = 0
tile_set = ExtResource( 15 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -1310578, 0, 0, -1310577, 1, 0, -1310576, 1, 0, -1310575, 1, 0, -1310574, 1, 0, -1310573, 1, 0, -1310572, 1, 0, -1310571, 1, 0, -1310570, 1, 0, -1310569, 1, 0, -1310568, 1, 0, -1310567, 1, 0, -1310566, 1, 0, -1310565, 1, 0, -1245042, 3, 0, -1179506, 3, 0, -1113970, 3, 0, -1048434, 3, 0, -982902, 1, 0, -982901, 1, 0, -982900, 1, 0, -982898, 3, 0, -917362, 3, 0, -851826, 3, 0, -786375, 5, 0, -786372, 3, 0, -786290, 3, 0, -720839, 5, 0, -720836, 3, 0, -720754, 3, 0, -655303, 5, 0, -655300, 3, 0, -655218, 3, 0, -589767, 5, 0, -589764, 3, 0, -589686, 1, 0, -589685, 1, 0, -589684, 1, 0, -589682, 3, 0, -524231, 5, 0, -524228, 3, 0, -524146, 3, 0, -458695, 5, 0, -458692, 3, 0, -458610, 3, 0, -393159, 5, 0, -393156, 3, 0, -393074, 3, 0, -327623, 5, 0, -327620, 3, 0, -327538, 3, 0, -262088, 3, 0, -262087, 5, 0, -262084, 3, 0, -262002, 3, 0, -196552, 3, 0, -196551, 5, 0, -196548, 3, 0, -196501, 0, 0, -196500, 1, 0, -196499, 1, 0, -196498, 1, 0, -196466, 3, 0, -131016, 3, 0, -131015, 5, 0, -131012, 3, 0, -130965, 3, 0, -130930, 3, 0, -65536, 0, 0, -65535, 2, 0, -65480, 3, 0, -65479, 5, 0, -65476, 3, 0, -65429, 3, 0, -65394, 3, 0, 0, 3, 0, 1, 5, 0, 56, 3, 0, 57, 5, 0, 60, 3, 0, 107, 3, 0, 142, 3, 0, 65536, 3, 0, 65537, 5, 0, 65592, 3, 0, 65593, 5, 0, 65596, 3, 0, 65643, 3, 0, 65678, 3, 0, 131072, 3, 0, 131073, 5, 0, 131128, 3, 0, 131129, 5, 0, 131132, 3, 0, 131179, 3, 0, 131214, 3, 0, 196608, 3, 0, 196609, 5, 0, 196664, 3, 0, 196665, 5, 0, 196668, 3, 0, 196715, 3, 0, 196750, 3, 0, 262144, 3, 0, 262145, 5, 0, 262200, 6, 0, 262201, 8, 0, 262204, 3, 0, 262251, 3, 0, 262286, 3, 0, 327680, 3, 0, 327681, 5, 0, 327740, 3, 0, 327787, 3, 0, 393216, 3, 0, 393217, 5, 0, 393276, 3, 0, 393323, 3, 0, 458752, 3, 0, 458753, 5, 0, 458764, 0, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 458770, 1, 0, 458771, 2, 0, 458779, 0, 0, 458780, 1, 0, 458781, 1, 0, 458782, 1, 0, 458783, 1, 0, 458784, 1, 0, 458785, 1, 0, 458786, 1, 0, 458787, 1, 0, 458788, 1, 0, 458789, 2, 0, 458801, 0, 0, 458802, 1, 0, 458803, 1, 0, 458804, 1, 0, 458805, 1, 0, 458806, 1, 0, 458807, 1, 0, 458808, 1, 0, 458809, 1, 0, 458810, 1, 0, 458811, 1, 0, 458812, 9, 0, 458853, 0, 0, 458854, 1, 0, 458855, 1, 0, 458856, 1, 0, 458857, 1, 0, 458858, 1, 0, 458859, 9, 0, 524288, 3, 0, 524289, 10, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 9, 0, 524307, 5, 0, 524315, 3, 0, 524325, 5, 0, 524337, 3, 0, 524389, 3, 0, 589843, 5, 0, 589851, 3, 0, 589861, 5, 0, 589873, 3, 0, 589925, 3, 0, 655379, 5, 0, 655387, 3, 0, 655397, 5, 0, 655409, 3, 0, 655461, 3, 0, 720915, 5, 0, 720923, 3, 0, 720933, 5, 0, 720945, 3, 0, 720997, 3, 0, 786451, 5, 0, 786459, 3, 0, 786469, 5, 0, 786481, 3, 0, 786533, 3, 0, 851987, 5, 0, 851995, 3, 0, 852005, 5, 0, 852017, 3, 0, 852069, 3, 0, 917523, 5, 0, 917531, 3, 0, 917541, 5, 0, 917553, 3, 0, 917605, 3, 0, 983059, 5, 0, 983067, 3, 0, 983077, 5, 0, 983089, 3, 0, 983141, 3, 0, 1048595, 5, 0, 1048603, 3, 0, 1048613, 5, 0, 1048625, 3, 0, 1048677, 3, 0 )
_sections_unfolded = [ "Cell", "Transform" ]

[node name="Area2D2" parent="world1" index="0" instance=ExtResource( 16 )]

position = Vector2( 3584.25, -64.0598 )

[node name="DangerBlock" parent="world1" index="1" instance=ExtResource( 17 )]

position = Vector2( 3739.44, -53.9091 )
scale = Vector2( 3.75205, 1 )

[node name="DangerBlock2" parent="world1" index="2" instance=ExtResource( 17 )]

position = Vector2( 3826.94, -244.606 )
scale = Vector2( 1, 5.00257 )

[node name="world2" type="TileMap" parent="." index="3"]

mode = 0
tile_set = ExtResource( 18 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 2
collision_mask = 2
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -1179510, 1, 0, -1179509, 1, 0, -1179508, 1, 0, -786294, 1, 0, -786293, 1, 0, -786292, 1, 0, -458649, 5, 0, -458631, 0, 0, -458630, 1, 0, -458629, 1, 0, -458628, 1, 0, -458627, 1, 0, -458626, 1, 0, -458625, 1, 0, -458624, 1, 0, -458623, 1, 0, -458622, 1, 0, -458621, 1, 0, -458620, 1, 0, -458619, 1, 0, -458618, 1, 0, -458617, 1, 0, -458616, 2, 0, -393113, 5, 0, -393095, 3, 0, -393080, 5, 0, -327577, 5, 0, -327559, 3, 0, -327544, 5, 0, -262041, 5, 0, -262023, 3, 0, -262008, 5, 0, -196505, 5, 0, -196487, 3, 0, -196472, 5, 0, -130969, 5, 0, -130951, 3, 0, -130936, 5, 0, -65433, 5, 0, -65415, 3, 0, -65400, 5, 0, 103, 5, 0, 136, 5, 0, 65639, 5, 0, 65672, 5, 0, 131175, 5, 0, 196684, 0, 0, 196685, 1, 0, 196686, 1, 0, 196687, 1, 0, 196688, 1, 0, 196689, 1, 0, 196690, 1, 0, 196691, 1, 0, 196692, 1, 0, 196693, 2, 0, 196711, 5, 0, 262220, 3, 0, 262229, 5, 0, 262247, 5, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327721, 0, 0, 327722, 1, 0, 327723, 1, 0, 327724, 1, 0, 327725, 2, 0, 327765, 5, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393257, 6, 0, 393258, 7, 0, 393259, 7, 0, 393260, 7, 0, 393261, 8, 0, 393301, 10, 0, 393302, 1, 0, 393303, 1, 0, 393304, 1, 0, 393305, 1, 0, 393306, 1, 0, 393307, 1, 0, 393308, 2, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458801, 0, 0, 458802, 1, 0, 458803, 1, 0, 458804, 1, 0, 458805, 1, 0, 458806, 1, 0, 458807, 1, 0, 458808, 1, 0, 458809, 1, 0, 458810, 1, 0, 458811, 1, 0, 458812, 1, 0, 458813, 1, 0, 458814, 1, 0, 458815, 1, 0, 458816, 1, 0, 458817, 1, 0, 458818, 1, 0, 458819, 1, 0, 458844, 5, 0, 524337, 3, 0, 524380, 5, 0, 589873, 3, 0, 589916, 5, 0, 655409, 3, 0, 655452, 5, 0, 720945, 3, 0, 720988, 5, 0, 786481, 3, 0, 786524, 5, 0, 852017, 3, 0, 852060, 5, 0, 917553, 3, 0, 917596, 5, 0, 983089, 3, 0, 983132, 5, 0, 1048625, 3, 0, 1048668, 5, 0 )
_sections_unfolded = [ "Cell", "Collision", "Transform" ]

[node name="DangerBlock2" parent="world2" index="0" instance=ExtResource( 17 )]

position = Vector2( 2329.3, 271.424 )
scale = Vector2( 2.61569, 1 )
collision_layer = 2
collision_mask = 2
_sections_unfolded = [ "Collision" ]

[node name="DangerBlock3" parent="world2" index="1" instance=ExtResource( 17 )]

position = Vector2( 2439.71, 227.212 )
scale = Vector2( 0.81596, 2.41287 )

[node name="Area2D" parent="world2" index="2" instance=ExtResource( 16 )]

position = Vector2( 2211.09, 254.765 )
collision_layer = 2
collision_mask = 2

[node name="world1_outline" type="TileMap" parent="." index="4"]

mode = 0
tile_set = null
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )

[node name="world2_outline" type="TileMap" parent="." index="5"]

mode = 0
tile_set = null
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )

[node name="respt" type="Position2D" parent="." index="6"]

position = Vector2( 107.745, 101.407 )

[connection signal="screen_exited" from="respawnpoint/player/VisibilityNotifier2D" to="respawnpoint" method="_on_VisibilityNotifier2D_screen_exited"]


